--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.onlinejobfinder">
-    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OnlineJobFinder">
-        <activity android:name=".GuestActivity"></activity>
+        android:theme="@style/Theme.OnlineJobFinder"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".guest.EditProfileActivity"></activity>
+        <activity android:name=".employer.EmployerActivity" />
+        <activity android:name=".EmailActivity" />
+        <activity android:name=".GuestActivity" />
         <activity android:name=".tabregister.RegisterActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -21,5 +23,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
