--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,15 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+   // useLibrary 'org.apache.http.legacy'
+    packagingOptions{
+        exclude 'META-INF/DEPENDENCIES'
+
+    }
 
     defaultConfig {
         applicationId "com.example.onlinejobfinder"
-        minSdkVersion 22
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -44,6 +49,10 @@ dependencies {
     implementation 'com.sun.mail:android-activation:1.6.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.vonage:client:6.2.0'
+    //implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    api 'com.github.ok2c.hc4.android:httpclient-android:0.1.0'
+    //implementation 'org.apache.httpcomponents:httpclient:4.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
