--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineJobFinder"
         android:usesCleartextTraffic="true">
-        <activity android:name=".EmployerVerifyOTP"></activity>
+        <activity android:name=".applicant.UpdateWorkExperienceActivity"></activity>
+        <activity android:name=".applicant.AddWorkExperience" />
+        <activity android:name=".EmployerVerifyOTP" />
         <activity android:name=".employer.EditEmployerProfileActivity" />
         <activity android:name=".VerifyOTP" />
         <activity android:name=".EditContactNumberActivity" />
