DatePicker Year in educational background, get region in rest api and design in job description is complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineJobFinder"
         android:usesCleartextTraffic="true">
-        <activity android:name=".applicant.UpdateWorkExperienceActivity"></activity>
+        <activity android:name=".applicant.ApplicantJobDescriptionActivity"></activity>
+        <activity android:name=".applicant.UpdateWorkExperienceActivity" />
         <activity android:name=".applicant.AddWorkExperience" />
         <activity android:name=".EmployerVerifyOTP" />
         <activity android:name=".employer.EditEmployerProfileActivity" />
