--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.vonage:client:6.2.0'
     implementation 'com.whiteelephant:monthandyearpicker:1.3.0'
+    implementation 'com.github.amarjain07:StickyScrollView:1.0.2'
     //implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     //api 'com.github.ok2c.hc4.android:httpclient-android:0.1.0'
     //implementation 'org.apache.httpcomponents:httpclient:4.3.5'
