--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,24 +10,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineJobFinder"
         android:usesCleartextTraffic="true">
-        <activity android:name=".applicant.ApplicantJobDescriptionActivity"></activity>
-        <activity android:name=".applicant.UpdateWorkExperienceActivity" />
-        <activity android:name=".applicant.AddWorkExperience" />
-        <activity android:name=".EmployerVerifyOTP" />
-        <activity android:name=".employer.EditEmployerProfileActivity" />
-        <activity android:name=".VerifyOTP" />
-        <activity android:name=".EditContactNumberActivity" />
-        <activity android:name=".EditEmployerContactNumberActivity" />
-        <activity android:name=".applicant.UpdateEducationActivity" />
-        <activity android:name=".applicant.AddEducationActivity" />
-        <activity android:name=".applicant.UploadResumeActivity" />
-        <activity android:name=".tabregister.EmployerRegistrationActivity" />
-        <activity android:name=".applicant.EditProfileActivity" />
-        <activity android:name=".employer.EmployerActivity" />
-        <activity android:name=".EmailActivity" />
-        <activity android:name=".ApplicantActivity" />
-        <activity android:name=".tabregister.RegisterActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".applicant.ApplicantJobDescriptionActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".applicant.UpdateWorkExperienceActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".applicant.AddWorkExperience" android:screenOrientation="portrait"/>
+        <activity android:name=".EmployerVerifyOTP" android:screenOrientation="portrait"/>
+        <activity android:name=".employer.EditEmployerProfileActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".VerifyOTP" android:screenOrientation="portrait"/>
+        <activity android:name=".EditContactNumberActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".EditEmployerContactNumberActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".applicant.UpdateEducationActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".applicant.AddEducationActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".applicant.UploadResumeActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".tabregister.EmployerRegistrationActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".applicant.EditProfileActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".employer.EmployerActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".EmailActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ApplicantActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".tabregister.RegisterActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
