Design and intent in view applied applicant decline&reject module in employer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineJobFinder"
         android:usesCleartextTraffic="true">
-        <activity android:name=".employer.RequestMaintenanceActivity"></activity>
+        <activity android:name=".employer.ViewAcceptRejectApplicantActivity"></activity>
+        <activity android:name=".employer.RequestMaintenanceActivity" />
         <activity android:name=".employer.ViewApplyApplicantActivity" />
         <activity android:name=".applicant.ApplicantFinalCheckProfileActivity" />
         <activity android:name=".applicant.ApplicantSavedJobActivity" />
