Bug fixed in login module is complete

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,12 @@ android {
 
     }
 
+    lintOptions {
+
+        checkReleaseBuilds false
+
+    }
+
     defaultConfig {
         applicationId "com.example.onlinejobfinder"
         minSdkVersion 26
